--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-hacker
-show_downloads: "false"
+show_downloads: false
 title: [mir-smith.github.io]
 description: [Miscellaneous stuff and nonsence]
