--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme
 theme: jekyll-theme-hacker
-show_downloads: false
+repository: mir-smith/mir-smith.github.io
 title: MIR-SMITH UNLIMITED
 description: Miscellaneous Stuff
+show_downloads: false
